# vnpy_novastrategy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: download_data.py  run_backtesting.ipynb  sma_backtesting.ipynb  sma_strategy.py  table_demo.ipynb  trend_backtesting.ipynb  turtle_backtesting.ipynb
examples/sma_strategy/: download_data.py  run_backtesting.ipynb  sma_strategy.py
examples/table_demo/: table_demo.ipynb
examples/trend_strategy/: download_data.py  run_backtesting.ipynb  trend_strategy.py
examples/turtle_strategy/: download_data.py  run_backtesting.ipynb  turtle_strategy.py
script/: run.py
vnpy_novastrategy/: __init__.py  backtesting.py  base.py  engine.py  handler.py  table.py  template.py
vnpy_novastrategy/expression/: __init__.py  cs_function.py  ta_function.py  ts_function.py
vnpy_novastrategy/strategies/: demo_strategy.py  sma_strategy.py  trend_strategy.py  turtle_strategy.py
vnpy_novastrategy/ui/: __init__.py  widget.py
vnpy_portfoliostrategy/: backtesting.py  base.py  template.py
