[metadata]
name = vnpy_novastrategy
version = attr: vnpy_novastrategy.__version__
author = VeighNa Global
author_email = veighna@hotmail.com
description = Nova strategy application for VeighNa quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/veighna-global
license = MIT
license_files = LICENSE
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    crypto
    btc
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
zip_safe = False
install_requires =
    vnpy

[options.package_data]
* = *.ico
